--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ actix-web = "4"
 actix-rt = "2"
 sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "migrate", "uuid"] }
 dotenvy = "0.15"
+gcloud-sdk = { version = "0.27.1", features = ["google-area120-tables-v1alpha1"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.140"
 serde_plain = "1"
+serde_qs = { version = "0.15", features= ["actix4"] }
+thiserror = "2.0.12"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
 utoipa = { version = "4", features = ["actix_extras", "uuid"] }
 utoipa-swagger-ui = "4"
-gcloud-sdk = { version = "0.27.1", features = ["google-area120-tables-v1alpha1"] }
-thiserror = "2.0.12"
-serde_json = "1.0.140"
