--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ thiserror = "2.0.12"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
-utoipa = { version = "4", features = ["actix_extras", "uuid"] }
-utoipa-swagger-ui = "4"
+utoipa = { version = "5", features = ["actix_extras", "uuid"] }
+utoipa-scalar = { version = "0.3", features = ["actix-web"] }
+utoipa-actix-web = "0.1"
