--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
 utoipa = { version = "5", features = ["actix_extras", "macros", "uuid"] }
 utoipa-scalar = { version = "0.3", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
+svg = "0.18.0"
+futures = "0.3.31"
