--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
 utoipa = { version = "5", features = ["actix_extras", "macros", "uuid"] }
 utoipa-scalar = { version = "0.3", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
+actix-files = "0.6.6"
