--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ actix-files = "0.6"
 actix-web = "4"
 actix-rt = "2"
 dotenvy = "0.15"
-gcloud-sdk = { version = "0.27", features = ["google-area120-tables-v1alpha1"] }
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_plain = "1"
