--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
 utoipa = { version = "5", features = ["actix_extras", "macros", "uuid"] }
 utoipa-scalar = { version = "0.3", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
+regex = "1.11.1"
